--- a/public/css/addContact.css
+++ b/public/css/addContact.css
@@ -1,100 +1,90 @@
 @import url("footer.css");
 @import url("header.css");
-
+@import url("color.css");
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  :root {
-    --color1: #000000;
-    --color3: #ff0000;
-    --color2: #ededed;
-  }
-  
-  body {
-    height: 100vh;
-    background: var(--color1);
-  }
-
-.main{
-    height: 73.6vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-  .form-container{
-      width: 50%;
-      padding: 40px;
-    }
-    .form-container h2{
-        color: var(--color2);
-    }
-    
-    .forms{
-    width: 70%;
-    margin: auto;
-
+:root {
+  --color1: #000000;
+  --color3: #ff0000;
+  --color2: #ededed;
 }
 
-.forms .inputBox{
-    position: relative;
-    width: 100%;
-    margin-top: 1rem;
-
+body {
+  height: 100vh;
+  background: var(--color1);
 }
 
-.forms .inputBox input{
-    color: var(--color2);
-    background-color: var(--color1);
-    width: 100%;
-    margin: 10px 0;
-    padding: 0.5rem 0;
-    border: none;
-    border-bottom: 2px solid var(--color2);
-    outline: none;
+.main {
+  height: 73.6vh;
+}
+.form-container {
+  width: 50%;
+  padding: 40px;
+}
+.form-container h2 {
+  color: var(--color2);
 }
 
-.forms .inputBox span{
-    position: absolute;
-    left: 0;
-    pointer-events: none;
-    color: var(--color2);
-    transition: 0.5s;
-    margin: 10px 0;
-    padding: 5px 0;
+.forms {
+  width: 70%;
+  margin: auto;
 }
 
+.forms .inputBox {
+  position: relative;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.forms .inputBox input {
+  color: var(--color2);
+  background-color: var(--color1);
+  width: 100%;
+  margin: 10px 0;
+  padding: 0.5rem 0;
+  border: none;
+  border-bottom: 2px solid var(--color2);
+  outline: none;
+}
+
+.forms .inputBox span {
+  position: absolute;
+  left: 0;
+  pointer-events: none;
+  color: var(--color2);
+  transition: 0.5s;
+  margin: 10px 0;
+  padding: 5px 0;
+}
 
 .forms .inputBox input:focus ~ span,
-.forms .inputBox input:valid ~ span{
-    color: var(--color3);
-    font-size:0.8rem;
-    transform: translateY(-1rem);
-
+.forms .inputBox input:valid ~ span {
+  color: var(--color3);
+  font-size: 0.8rem;
+  transform: translateY(-1rem);
 }
 
-.btn{
-    margin-top: 2rem;
+.btn {
+  margin-top: 2rem;
 }
-.submitBtn, .resetBtn{
-    color: var(--color2);
-    background-color: var(--color1);
-    border: 2px solid var(--color2);
-    padding: 0.6rem 1.5rem;
-    margin: 0 1rem;
-    transition: 0.2s ease-in-out;
-}
-
-
-.resetBtn:hover{
-    background-color: var(--color3);
-   
+.submitBtn,
+.resetBtn {
+  color: var(--color2);
+  background-color: var(--color1);
+  border: 2px solid var(--color2);
+  padding: 0.6rem 1.5rem;
+  margin: 0 1rem;
+  transition: 0.2s ease-in-out;
 }
 
-.submitBtn:hover{
-    background-color:var(--color2);
-    color: var(--color1);
-    
+.resetBtn:hover {
+  background-color: var(--color3);
 }
 
-
-
-
+.submitBtn:hover {
+  background-color: var(--color2);
+  color: var(--color1);
+}
