--- a/templates/views/editContact.hbs
+++ b/templates/views/editContact.hbs
@@ -1,192 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-    
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+
     <style>
-  
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+        :root {
+            --color1: #000000;
+            --color3: #ff0000;
+            --color2: #ededed;
+        }
 
-:root {
-    --color1: #000000;
-    --color3: #ff0000;
-    --color2: #ededed;
-}
+        body {
+            height: 100vh;
+            background: var(--color1);
+        }
 
-body {
-    height: 100vh;
-    background: var(--color1);
-}
-.navbar{
-    background-color: var(--color1)!important;
-    color: var(--color)!important;
-    position: sticky;
-    top: 0;
-    height: 10vh;
-    z-index: 5;
-}
-.navbar-brand span{
-    color: var(--color3);
-}
-.navBar{
-    padding-bottom: 10px;
-    border-bottom: 1px solid var(--color3);
-}
+        .navbar {
+            background-color: var(--color1) !important;
+            color: var(--color) !important;
+            position: sticky;
+            top: 0;
+            height: 10vh;
+            z-index: 5;
+        }
 
+        .navbar-brand span {
+            color: var(--color3);
+        }
 
-.main {
-    height: 73.6vh;
-}
-
-.form-container {
-    width: 50%;
-    padding: 40px;
-}
-
-.form-container h2 {
-    color: var(--color2);
-}
-
-.forms {
-    width: 70%;
-    margin: auto;
-
-}
-
-.forms .inputBox {
-    position: relative;
-    width: 100%;
-    margin-top: 1rem;
-
-}
-
-.forms .inputBox input {
-    color: var(--color2);
-    background-color: var(--color1);
-    width: 100%;
-    margin: 10px 0;
-    padding: 0.5rem 0;
-    border: none;
-    border-bottom: 2px solid var(--color2);
-    outline: none;
-}
-
-.forms .inputBox span {
-    position: absolute;
-    left: 0;
-    pointer-events: none;
-    color: var(--color2);
-    transition: 0.5s;
-    margin: 10px 0;
-    padding: 5px 0;
-}
+        .navBar {
+            padding-bottom: 10px;
+            border-bottom: 1px solid var(--color3);
+        }
 
 
-.forms .inputBox input:focus~span,
-.forms .inputBox input:valid~span {
-    color: var(--color3);
-    font-size: 0.8rem;
-    transform: translateY(-1rem);
+        .main {
+            height: 73.6vh;
+        }
 
-}
+        .form-container {
+            width: 50%;
+            padding: 40px;
+        }
 
-.btn {
-    margin-top: 2rem;
-}
+        .form-container h2 {
+            color: var(--color2);
+        }
 
-.submitBtn,
-.resetBtn {
-    color: var(--color2);
-    background-color: var(--color1);
-    border: 2px solid var(--color2);
-    padding: 0.6rem 1.5rem;
-    margin: 0 1rem;
-    transition: 0.2s ease-in-out;
-}
+        .forms {
+            width: 70%;
+            margin: auto;
+
+        }
+
+        .forms .inputBox {
+            position: relative;
+            width: 100%;
+            margin-top: 1rem;
+
+        }
+
+        .forms .inputBox input {
+            color: var(--color2);
+            background-color: var(--color1);
+            width: 100%;
+            margin: 10px 0;
+            padding: 0.5rem 0;
+            border: none;
+            border-bottom: 2px solid var(--color2);
+            outline: none;
+        }
+
+        .forms .inputBox span {
+            position: absolute;
+            left: 0;
+            pointer-events: none;
+            color: var(--color2);
+            transition: 0.5s;
+            margin: 10px 0;
+            padding: 5px 0;
+        }
 
 
-.resetBtn:hover {
-    background-color: var(--color3);
+        .forms .inputBox input:focus~span,
+        .forms .inputBox input:valid~span {
+            color: var(--color3);
+            font-size: 0.8rem;
+            transform: translateY(-1rem);
 
-}
+        }
 
-.submitBtn:hover {
-    background-color: var(--color2);
-    color: var(--color1);
+        .btn {
+            margin-top: 2rem;
+        }
 
-}
+        .submitBtn,
+        .resetBtn {
+            color: var(--color2);
+            background-color: var(--color1);
+            border: 2px solid var(--color2);
+            padding: 0.6rem 1.5rem;
+            margin: 0 1rem;
+            transition: 0.2s ease-in-out;
+        }
 
-footer{
-    position: fixed;
-    background-color: var(--color1);
-    width: 100%;
-    height: 8vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 0;
-    border-top: 1px solid var(--color3);
-    margin-top: 15px;
-    z-index: -5;
-  
-}
 
-footer p{
-    vertical-align: middle;
-   font-size: 0.8rem;
-   color: var(--color2);
-}
+        .resetBtn:hover {
+            background-color: var(--color3);
+
+        }
+
+        .submitBtn:hover {
+            background-color: var(--color2);
+            color: var(--color1);
+
+        }
+
+        footer {
+            position: fixed;
+            background-color: var(--color1);
+            width: 100%;
+            height: 8vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            bottom: 0;
+            border-top: 1px solid var(--color3);
+            margin-top: 15px;
+            z-index: -5;
+
+        }
+
+        footer p {
+            vertical-align: middle;
+            font-size: 0.8rem;
+            color: var(--color2);
+        }
     </style>
 
-    
+
 </head>
+
 <body>
-          {{>header}}
+    {{>header}}
 
 
     <div class="main">
         <div class="form-container container-sm text-center mt-3">
-       <h2>Edit Contacts</h2>
+            <h2>Edit Contacts</h2>
 
-       <form action="/update" method="post" class="forms" autocomplete="off">
-        <input type="hidden" name="id" value="{{contact.id}}">
-        <div class="inputBox">
-        <input type="text" value="{{contact.name}}" id="name" name="name" required >
-        <span>Contact Name*</span>
-        </div>
-        
-        <div class="inputBox">
-        <input type="tel" value="{{contact.phone}}" id="phone" name="phone"required >
-        <span>Contact Number*</span>
-        </div>
-        
-        <div class="inputBox">
-        <input type="text"  value="{{contact.email}}" id="email" name="email" required >
-        <span>Contact E-mail</span>
-        </div>
+            <form action="/update" method="post" class="forms" autocomplete="off">
+                <input type="hidden" name="id" value="{{contact.id}}">
+                <div class="inputBox">
+                    <input type="text" value="{{contact.name}}" id="name" name="name" required>
+                    <span>Contact Name*</span>
+                </div>
 
-        <div class="btn">
-        
-        <button id="submitBtn" class="submitBtn"type="submit">Submit</button>
-        <button type="reset" id="resetBtn" class="resetBtn">Reset</button>
-        </div>
+                <div class="inputBox">
+                    <input type="tel" value="{{contact.phone}}" id="phone" name="phone" required>
+                    <span>Contact Number*</span>
+                </div>
 
-       </form>
+                <div class="inputBox">
+                    <input type="text" value="{{contact.email}}" id="email" name="email" required>
+                    <span>Contact E-mail</span>
+                </div>
+
+                <div class="btn">
+
+                    <button id="submitBtn" class="submitBtn" type="submit">Submit</button>
+                    <button type="reset" id="resetBtn" class="resetBtn">Reset</button>
+                </div>
+
+            </form>
+        </div>
     </div>
-   </div>
 
 
-       {{>footer}}
+    {{>footer}}
 </body>
+
 </html>
